--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: dimgrey;
+    background-color: lightslategray;
     text-align: center;
 }
 
@@ -15,6 +15,10 @@ div {
 }
 
 img {
+    
+    border-style: solid;
+    border-width: 4px;
+    border-color: #000;
     width: 125px;
     height: 125px;
 }
@@ -22,4 +26,8 @@ img {
 p {
     font-family: sans-serif;
     font-size: 20px;
+}
+
+#solutionDiv {
+    color: maroon;
 }
